# PICO

Projeto teste/: CMakeLists.txt  main.c
